Added HashMap